<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App meta data -->
    <string name="appName">Dog Yarn It</string>
    <!-- facebook -->
    <string name="app_id">1497949863800885</string>
    <string name="title_facebook_login">Facebook Login</string>

    <!-- Page titles -->
    <string name="mainTitle">Dog Yarn It</string>
    <string name="profileTitle">Profile</string>
    <string name="profileNameTitle">Profile Name</string>
    <string name="profileCreationTitle">Dimensions</string>
    <string name="settingsTitle">Settings</string>
    <string name="yarnTitle">Yarn</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_yarn_selection">Yarn Selection</string>
    <string name="title_activity_style">Archetypes</string>
    <string name="title_activity_materials">Material Checklist</string>
    <string name="title_activity_pattern">Pattern</string>
    <string name="title_activity_current_projects">Current Projects</string>
    <string name="title_activity_manage_profiles">Manage Profiles</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_project_pattern">Pattern</string>
    <string name="title_activity_profile_selection">Profile Selection</string>

    <!-- Button text -->
    <string name="newProjectButton">NEW PROJECT</string>
    <string name="currentProjectsButton">CURRENT PROJECTS</string>
    <string name="manageProfilesButton">MANAGE PROFILES</string>
    <string name="informationButton">ABOUT</string>
    <string name="createNewButton">Create New</string>
    <string name="chooseExistingButton">Choose Existing</string>
    <string name="needYarnButton">I Need Yarn</string>
    <string name="haveYarnButton">I Have Yarn</string>
    <string name="nextButton">Next</string>
    <string name="addImageButton">Add Picture</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Context menu items -->
    <string name="menuItemTakePicture">Take Photo</string>
    <string name="menuItemChooseImage">Choose Image</string>

    <!-- Image Description text -->
    <string name="imageDescLogo">Dog Yarn It Logo</string>
    <string name="imageDescDimension">Dog Dimension</string>

    <!-- App Page text -->
    <string name="nameProfileText">NAME YOUR DOG</string>
    <string name="takePhoto">ADD PICTURE</string>
    <string name="yarnTypeText">Yarn Type:</string>

    <!-- Text box hints -->
    <string name="hintNameProfile">Dog Name</string>
    <string name="hintDimension">Dimension</string>

    <!-- Text box labels -->
    <string name="labelGaugeInput">Gauge:</string>

    <!-- Settings button text -->
    <string name="settingsSettingsButton">Settings</string>
    <string name="yarnSelection">Yarn Selection</string>

    <!-- Instructions text -->
    <string name="instructions">Instructions</string>

    <!-- Unit Spinner text -->
    <string-array name="units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <!-- Color Spinner text -->
    <string-array name="colors">
        <item>red</item>
        <item>blue</item>
        <item>green</item>
        <item>orange</item>
        <item>yellow</item>
        <item>purple</item>
        <item>black</item>
        <item>white</item>
    </string-array>

    <!-- Types of Yarn Spinner text -->
    <string-array name="types">
        <item>Fingering</item>
        <item>Spot</item>
        <item>Double Knitting</item>
        <item>Worsted</item>
        <item>Aran</item>
        <item>Bulky</item>
        <item>Super Bulky</item>
    </string-array>

    <!-- Colors -->
    <color name="gridBackground">#fce8ff</color>
    <color name="appBackground">#FFFFFF</color>

    <!-- Main App Colors -->
    <color name="teal">#2BB6C1</color>
    <color name="peach">#E95E53</color>
    <color name="gray">#BFBFBF</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

    <!-- Info Page -->
    <string name="about_app">Dog Yarn It is an application designed to provide knitters with a
        simple and reliable way to create custom patterns for their dog sweater projects.\n\n
       All that Dog Yarn It needs to provide you with accurate, form-fitting sweaters is a set of
        measurements of your pet. After that, you can customize the style and yarn type for your
        sweater and get instant feedback.\n\n
       This application was developed for knittingAstor Design Ventures Inc.</string>
    <string name="about_astor">Astor Tsang is a Vancouver-based knitwear designer and knitting instructor
        who specializes in pattern design and creation.\n\nDog Yarn It represents Astor\'s desire to provide
        a simple, appealing way for knitters to knit sweaters for dogs of all shapes and sizes.</string>
    <string name="about_vicky">Vicky Kim is a Vancouver based illustrator and graphic designer with a
    BFA from Emily Carr University of Art and Design.\n\nShe is currently working as a freelance illustrator,
    collaborating with various companies to create personalized illustrations according to company needs.</string>
    <string name="about_team">This app was created by four students from the British Columbia
        Institute of Technology over a 15 week period. These team members are:\n\n\
        Georgi Hristov\n
        Christofer Klassen\n
        Rhea Lauzon\n
        Eric Tsang</string>

    <!-- manage profiles page -->
    <string name="delete_profile_prompt">Are you sure you want to delete this profile?\nDoing so will delete all related projects.</string>

    <!-- TODO: change following friendly string values to proper ones -->
    <!-- TODO: discuss naming convention for friendlies, drawables, and descriptions with group...should these be prefized with "Profile"? -->
    <!-- TODO: changing naming convention will mean that the Dimensions.getFriendly(), Dimensions.getDescription() and Dimensions.getDrawable() methods will have to be modified -->
    <!-- Dimensions class friendly strings for Profile keys -->
    <string name="AFriendly">Diameter Around Neck</string>
    <string name="BFriendly">Diameter Around Chest</string>
    <string name="CFriendly">Width Between Front Legs</string>
    <string name="XFriendly">Chin to Collar</string>
    <string name="YFriendly">Length of Underbelly</string>
    <string name="ZFriendly">Length of Center Back</string>

    <!-- Dimension descriptions for info popup -->
    <string name="ADescription">Measure around the dog\'s collar.</string>
    <string name="BDescription">Measure around the dog\'s.</string>
    <string name="CDescription">Measure between two front legs.</string>
    <string name="XDescription">Measure from the dog\'s chin to the base of the collar.</string>
    <string name="YDescription">Measure from front leg to back legs.</string>
    <string name="ZDescription">Measure from nape of neck to base of tail.</string>

    <!-- Hints for each dimension -->
    <string name="AHint">Diameter</string>
    <string name="BHint">Diameter</string>
    <string name="CHint">Width</string>
    <string name="XHint">Length </string>
    <string name="YHint">Length</string>
    <string name="ZHint">Length</string>
    <string name="title_activity_pdf_preview">Pdf Preview</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_modify_projects">ModifyProjects</string>
    <string name="title_activity_modify_profile">ModifyProfile</string>
    <string name="title_activity_congratulations">Share</string>
    <string name="title_activity_facebook_share">FacebookShare</string>

    <!-- do not commit the following additions -->
    <string name="caption_activity_congratulations">Congratulations!</string>
    <string name="generalShareButton">generalShareButton</string>
    <!-- do not commit the above additions -->

    <string name="share_caption">Look at the dog sweater I made using Dog Yarn It:</string>
    <string name="title_activity_settings">settings</string>

</resources>