<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation = "vertical"
    tools:context="group8.comp3900.year2014.com.bcit.dogsweater.DogProfileCreation">

    <group8.comp3900.year2014.com.bcit.dogsweater.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imageDescDimension"
        android:id="@+id/imageView"
        android:src="@drawable/dog_diagram" />

    <TextView
        android:text="@string/profileCreationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileText"
        android:textSize="30sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textSize="30sp"
        android:hint="@string/hintDimension"
        android:id="@+id/measureA" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:id="@+id/Next"
        android:textSize="30sp"
        android:layout_gravity="bottom"
        android:onClick="next" />

</LinearLayout>
