<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:orientation = "vertical"
    >

    <group8.comp3900.year2014.com.bcit.dogsweater.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imageDescLogo"
        android:id="@+id/imageView"
        android:src="@drawable/dog_silhouette_sweater"
        />

   <Space
       android:layout_width="wrap_content"
       android:layout_height="0dp"
       android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:orientation="vertical">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/newProjectButton"
                android:id="@+id/newProjectButton"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@drawable/text_colors"
                android:background="@drawable/button_style"
                android:onClick="newProject"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/currentProjectsButton"
                android:id="@+id/currentProjectsButton"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@drawable/text_colors"
                android:background="@drawable/button_style"
                android:onClick="currentProjects"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/manageProfilesButton"
                android:id="@+id/manageProfilesButton"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@drawable/text_colors"
                android:background="@drawable/button_style"
                android:onClick="manageProfiles"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/informationButton"
                android:id="@+id/informationButton"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@drawable/text_colors"
                android:background="@drawable/button_style"
                android:onClick="info"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
