<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="group8.comp3900.year2014.com.bcit.dogsweater.ProfileName" >

    <group8.comp3900.year2014.com.bcit.dogsweater.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dyi_icon_collar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameProfileText"
        android:id="@+id/nameDog"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintNameProfile"
        android:id="@+id/measureA"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addImageButton"
        android:id="@+id/addImage"
        android:textSize="30sp"
        android:src="@drawable/dyi_icon_camera"
        android:gravity="center_horizontal"
        android:onClick="getImageUri"
        android:background="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhoto"
        android:id="@+id/takePhoto"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Next"
        android:textSize="30sp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/dyi_icon_next"
        android:background="@color/white"
        android:onClick="dogMeasurements" />

    </RelativeLayout>

</LinearLayout>
