<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation = "vertical"
    tools:context="group8.comp3900.year2014.com.bcit.dogsweater.YarnChoice">


    <TextView
        android:text="@string/yarnTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/yarnTitle"
        android:layout_weight="0.10"
        android:textSize="40sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/needYarnButton"
        android:textSize="30sp"
        android:id="@+id/button2"
        android:layout_weight="0.20"
        android:onClick="needYarn"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.025" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/haveYarnButton"
        android:textSize="30sp"
        android:id="@+id/button"
        android:layout_weight="0.20"
        android:onClick="haveYarn" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25" />

</LinearLayout>
