<!-- Layout for About page; seen via About button on home page -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="group8.comp3900.year2014.com.bcit.dogsweater.About">

    <group8.comp3900.year2014.com.bcit.dogsweater.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appName"
                android:id="@+id/title"
                android:gravity="center"
                android:textColor="@color/peach"
                android:textSize="40sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/about_app"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <!-- Astor Bio -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Astor"
                android:id="@+id/Astor"
                android:textColor="@color/peach"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_astor"
                android:textSize="15sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <!-- Contact buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="0.33"
                        android:layout_height="wrap_content"
                        android:text="EMAIL"
                        android:layout_marginEnd="10dp"
                        android:background="@color/teal"
                        android:textColor="@color/white"
                        android:onClick="emailAstor"/>

                <Button
                        android:layout_width="0dp"
                        android:layout_weight="0.33"
                        android:layout_height="wrap_content"
                        android:text="WEBSITE"
                        android:layout_marginEnd="10dp"
                        android:background="@color/teal"
                        android:textColor="@color/white"
                        android:onClick="astorWebsite"/>

                <Button
                        android:layout_width="0dp"
                        android:layout_weight="0.33"
                        android:layout_height="wrap_content"
                        android:text="TWITTER"
                        android:background="@color/teal"
                        android:textColor="@color/white"
                        android:onClick="astorTwitter"/>
                </LinearLayout>
            
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <!-- Vicky Bio -->
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vicky"
            android:id="@+id/Vicky"
            android:textColor="@color/peach"
            android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/about_vicky"
                android:textSize="15sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.2"/>

            <!-- Team Bio -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Developers"
                android:id="@+id/Devs"
                android:textColor="@color/peach"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/about_team"
                android:textSize="15sp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
