<!--Layout for yarn selection; seen via creating a new project -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group8.comp3900.year2014.com.bcit.dogsweater.YarnSelection"
    android:orientation="vertical">

    <group8.comp3900.year2014.com.bcit.dogsweater.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/yarnSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/yarnText"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:layout_marginBottom="80dp">

            <TextView
                android:text="@string/labelGaugeInput"
                android:id="@+id/gaugeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:background="@drawable/edit_text_yarn"
                android:id="@+id/gaugeInput" />

        </TableRow>

        <TableRow
            android:paddingRight="30dp"
            android:paddingLeft="30dp">

            <TextView
                android:text="@string/yarnTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yarnType"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/types"
                android:background="@drawable/spinner_style"
                android:entries="@array/types"
                android:ellipsize="marquee" />

        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Next"
            android:textSize="30sp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/dyi_icon_next"
            android:background="@color/white"
            android:onClick="next" />

    </RelativeLayout>

</LinearLayout>
