<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="group8.comp3900.year2014.com.bcit.dogsweater.Info">

    <group8.comp3900.year2014.com.bcit.dogsweater.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="Information"
                android:gravity="center"
                android:textSize="40sp"
                android:layout_weight="0.1"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.2"/>

            <!-- Contact buttons -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email Astor"
                android:onClick="emailAstor"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Astor's Website"
                android:onClick="astorWebsite"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Astor's Twitter"
                android:onClick="astorTwitter"/>
            
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            
            <!-- Astor Bio -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/about_astor"
                android:textSize="20sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.2"/>

            <!-- Vicky Bio -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/about_vicky"
                android:textSize="20sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.2"/>

            <!-- Team Bio -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/about_team"
                android:textSize="20sp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
